--- a/build.gradle
+++ b/build.gradle
@@ -16,44 +16,39 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
+
+//From original project, don't know it's purpose, disable it for now.
+/*
 plugins {
     id "com.github.sherter.google-java-format" version "0.6"
     id "net.ltgt.errorprone" version "0.0.13"
 }
 
+
 googleJavaFormat {
     toolVersion = '1.5'
     options style: 'AOSP'
 }
+*/
 
-apply plugin: 'com.android.library'
+allprojects {
+    repositories {
+        google()
+        jcenter()
 
-repositories {
-    jcenter()
-    maven {
-        url 'https://maven.google.com/'
-        name 'Google'
     }
 }
 
-group = 'com.android.volley'
-version = '1.2.0-SNAPSHOT'
-
-android {
-    compileSdkVersion 25
-    buildToolsVersion = '25.0.2'
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xep:ParameterComment:ERROR"
-}
-
 apply from: 'rules.gradle'
+apply from: 'process_aar.gradle'
 apply from: 'bintray.gradle'
