--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
