--- a/rules.gradle
+++ b/rules.gradle
@@ -19,6 +19,10 @@ tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
+// Something wrong happened during generate javadoc.
+// Disable it for now.
+tasks.withType(Javadoc).all { enabled = false }
+
 dependencies {
   provided "com.android.support:support-annotations:28.0.0"
 }
